--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: EDM-Portfolio of Francia
+title: chan-edm
 show_downloads: true
 #theme: jeykll-theme-midnight
 remote_theme: pages-themes/midnight@v0.2.0
