--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Edm Portfolio
+title: Christian S. Boiles Github Portfolio
 show_downloads: true
 #theme: jekyll-theme-hacker
 remote_theme: pages-themes/hacker@v0.2.0
